@@ -14,7 +14,7 @@ from PyQt4.QtGui  import *
 from pprint import *
 pp = PrettyPrinter()
 
-import bookentry.journal_rc
+#import bookentry.journal_rc
 import bookentry.journalWin as mw
 
 __version__ = '1.0'
@@ -52,9 +52,9 @@ def main():
    app.setApplicationName('AJB Journal Entry')
    # app.setWindowIcon(QIcon(':/icon_journals.svg'))
    
-   form = mw.JournalEntry()
-   QObject.connect(app, SIGNAL("focusChanged(QWidget *, QWidget *)"), 
-                   form.setFocusChanged)
+   form = mw.JournalSearch()
+   #QObject.connect(app, SIGNAL("focusChanged(QWidget *, QWidget *)"), 
+   #                form.setFocusChanged)
 
    if args.version:
       hstr = form.helpString()
